tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-numeric-suffix.wyst
module removed_numeric_suffix

const BAD: u64 = 1_u64
